# j-scribe

./: CMakeLists.txt  voorEvert.txt
include/glad/: glad.c  glad.h
include/imgui/: imgui.cpp  imgui_box_shadow.cpp  imgui_box_shadow.h  imgui_impl_glfw_gl3.cpp  imgui_internal.h
main/: CMakeLists.txt  jscribe_app.cc  jscribe_app.h  main.cc
main/modules/: module.h
main/modules/plclogger/: plclogger.cc  plclogger.h
main/modules/sample_module/: sample_module.cc  sample_module.h
projects/sample/: sample.jscribe
